--- a/LearnDjango/Apps/core/templates/core/index.html
+++ b/LearnDjango/Apps/core/templates/core/index.html
@@ -2,9 +2,6 @@
 
 {% block body %}
 
-<div class="container alert alert-info"> 
-this is main web page
-
-</div>
+This Is Main Web Page
 
 {% endblock body %}
