--- a/LearnDjango/Apps/middleware/templates/middleware/index.html
+++ b/LearnDjango/Apps/middleware/templates/middleware/index.html
@@ -2,8 +2,6 @@
 
 {% block body %}
 
-<div class="container alert alert-danger">
-THis i s middleware
-</div>
+This is {{'Middleware'|upper}} Page 
 
 {% endblock %}
