--- a/LearnDjango/Apps/core/templates/core/base.html
+++ b/LearnDjango/Apps/core/templates/core/base.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     {% include 'core/navbar.html' %}
-    {% block body %}{% endblock body %}
+    <div class="container bg-info p-2">{% block body %}{% endblock body %}</div>
     {% include 'core/footer.html' %}
 </body>
 </html>
