--- a/LearnDjango/Apps/core/templates/core/navbar.html
+++ b/LearnDjango/Apps/core/templates/core/navbar.html
@@ -29,5 +29,17 @@
 <a href="{% url 'index-manytoone' %}" class="btn btn-outline-dark border m-2 text-white ">Many To One</a>
 </div>
  
+<div class="col">
+<a href="{% url 'index-manytomany' %}" class="btn btn-outline-dark border m-2 text-white ">Many To Many</a>
+</div>
+ 
+<div class="col">
+<a href="{% url 'index-classbasedview' %}" class="btn btn-outline-dark border m-2 text-white ">ClassBasedView</a>
+</div>
+ 
+<div class="col">
+<a href="{% url 'index-api' %}" class="btn btn-outline-dark border m-2 text-white ">Api</a>
+</div>
+ 
 </div>
 </div>
